--- a/package.json
+++ b/package.json
@@ -6,7 +6,10 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "migrate:firebase": "tsx scripts/migrate-to-firebase.ts",
+    "manage:admins": "tsx scripts/manage-admins.ts",
+    "import:auth": "tsx scripts/import-auth-accounts.ts"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.3.2",
@@ -23,6 +26,9 @@
     "autoprefixer": "^10.0.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
+    "dotenv": "^17.2.3",
+    "firebase": "^12.6.0",
+    "firebase-admin": "^13.6.0",
     "lucide-react": "^0.294.0",
     "next": "14.0.4",
     "postcss": "^8",
@@ -33,6 +39,7 @@
     "tailwind-merge": "^2.0.0",
     "tailwindcss": "^3.3.0",
     "tailwindcss-animate": "^1.0.7",
+    "tsx": "^4.20.6",
     "typescript": "^5",
     "zod": "^3.22.4"
   },
